# coffeeshops-search

./: .gitignore  Makefile  README.md  coffee.json  main.py  map.html  pyproject.toml  requirements.txt
coffeeshops_search/: main.py
